simplifying events sorting